fix visibility leaderboard

--- a/src/app/leaderboard/leaderboard.component.sass
+++ b/src/app/leaderboard/leaderboard.component.sass
@@ -24,4 +24,31 @@ h2
     text-shadow: 0 0 5px white
     font-size: 40pt
     text-align: center
-        
+
+ 
+.submitLeader
+    width: 100%
+    display: flex
+    justify-content: center
+    align-items: center
+    margin: 70px 10px 10px 10px
+
+    .button
+        margin: 20px 0px 60px 0       
+
+.form-group
+    display: flex
+    width: 55%
+    justify-content: space-between
+    align-items: center
+    font-size: 30pt
+    background-color: white
+    padding: 5px
+    margin: 20px 30px 60px 0
+
+    input
+        width: 55%
+        background-color: #ffffffbd
+        font-size: 25pt
+        margin: 5px
+        padding: 5px
